# dsp-anomaly-detection

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNNING.md  pyproject.toml
docs/: REPORT.md
docs/adr/: 0000-template.md  0001-late-fusion-multimodal-architecture.md  0002-shared-base-detector-refactor.md  0003-timestamp-based-av-synchronization.md  0004-score-calibration-historical-percentiles.md  0005-configurable-fusion-strategies.md  0006-no-pca-for-low-dim-video-features.md  0007-dual-horizon-fast-slow-models.md  0008-drift-aware-adaptive-refit-policy.md  0009-model-snapshots-and-retention.md  0010-explainability-via-zscore-baseline.md  0011-backward-compatible-event-schema-migration.md  0012-dashboard-pipeline-live-control-channel.md  0013-reemplazo-dashboard-streamlit-por-spa.md  README.md
docs/architecture/: multimodal-overview.md
docs/frontend-migration/: 01-analisis-dashboard-actual.md  02-plan-migracion-spa.md  03-contrato-api-frontend.md  README.md
src/: __init__.py  pipeline.py
src/api/: dependencies.py  main.py  schemas.py
src/dashboard/: api_client.py  app.py  styles.py
tests/: conftest.py  test_api.py  test_base_detector.py  test_calibration.py  test_dashboard.py  test_detection.py  test_drift_refit.py  test_dsp.py  test_embeddings.py  test_fusion.py  test_lint_target.py  test_pipeline.py  test_sample.py  test_schema_migration.py  test_storage.py  test_sync.py  test_video_detection.py  test_vision.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+98 files in other folders)
