[tool.poetry]
package-mode = false
name = "dsp-anomaly-detection"
version = "0.1.0"
description = "Sistema Inteligente Multimodal de Detección de Anomalías con Embeddings y Búsqueda por Similitud en Tiempo Real"
authors = ["sebcarvalho"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
numpy = "^2.4.4"
scipy = "^1.17.1"
pywavelets = "^1.9.0"
opencv-python = "^4.13.0.92"
torch = "^2.11.0"
transformers = "^5.5.0"
emd-signal = "^1.9.0"
scikit-learn = "^1.8.0"
faiss-cpu = "^1.13.2"
qdrant-client = "^1.17.1"
sounddevice = "^0.5.5"
soundfile = "^0.13.1"
librosa = "^0.11.0"
torchaudio = "^2.11.0"
torchvision = "^0.26.0"
av = "^17.0.0"
einops = "^0.8.2"
timm = "^1.0.26"
accelerate = "^1.13.0"
torchmetrics = "^1.9.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
fastapi = "^0.135.3"
uvicorn = {extras = ["standard"], version = "^0.43.0"}
streamlit = "^1.56.0"
plotly = "^6.6.0"
sqlalchemy = "^2.0.49"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
kymatio = "^0.3.0"
python-multipart = "^0.0.22"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pylint.main]
ignore-paths = ["tests", ".venv", ".claude"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
